crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table-scalars@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: 3,
  align: (left, left, left,),
  table.header([A], [B], [C]),
  [1.10], [+1], [0x1F],
  [3], [NULL], [Yes],
  table.cell(colspan: 2)[1e3], [on],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
