crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table-settings@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{longtable}{lrr}
\toprule
Category & Q1 & Q2 \\
\midrule
\endfirsthead
\toprule
Category & Q1 & Q2 \\
\midrule
\endhead
Salaries & 120 & 122 \\
\midrule[\heavyrulewidth]
\addlinespace
\multicolumn{3}{l}{\textit{Totals}} \\
\addlinespace
\midrule
Total & 120 & 122 \\
\bottomrule
\end{longtable}

---requires---
{
  "packages": [
    "booktabs",
    "longtable"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
