crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table-spans@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: 5,
  align: (left, left, left, left, left,),
  table.header(table.cell(rowspan: 3)[Product], table.cell(colspan: 4, align: center)[2024], table.cell(colspan: 2, align: center)[H1], table.cell(colspan: 2, align: center)[H2], [Q1], [Q2], [Q3], [Q4]),
  [Alpha], table.cell(colspan: 2, rowspan: 2)[Maria], [3], [4],
  [Beta], [5], [6],
  [Gamma], [1], [2], table.cell(colspan: 2, align: center)[Sum],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
