crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{table}[H]
\centering
\caption{Stock by warehouse.}
\label{tbl:stock}
\vspace{0.5em}
\begin{tabular}{lll}
\toprule
\multirow{2}{*}{Fruit} & \multicolumn{2}{c}{Warehouses} \\
\cmidrule(lr){2-3}
 & Geneva & Zurich \\
\midrule
Apples & 3 & 4 \\
\multicolumn{3}{c}{Total} \\
\bottomrule
\end{tabular}
\end{table}

---requires---
{
  "packages": [
    "booktabs",
    "float",
    "multirow"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
