crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#figure(
  table(
    columns: 3,
    align: (left, left, left,),
    table.header(table.cell(rowspan: 2)[Fruit], table.cell(colspan: 2, align: center)[Warehouses], [Geneva], [Zurich]),
    [Apples], [3], [4],
    table.cell(colspan: 3)[Total],
  ),
  caption: [Stock by warehouse.],
) <tbl:stock>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
