crates/tmark-writers/tests/snapshots/fixtures__frontmatter-deprecated@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Text.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
